--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,7 @@ html {
   border-radius: 5px;
   width: 195px;
   border: 1x solid;
-
+padding-left: 10px;
   border-color: coral;
   overflow-y: hidden;
 }
@@ -74,6 +74,7 @@ html {
 input.multiselect {
   display: flex;
   text-align: start;
+  padding-left: 10px;
   height: 100%;
   color: black;
   height: 25px;
@@ -82,7 +83,24 @@ input.multiselect {
 input.multiselect:focus {
   display: flex;
   text-align: start;
+  padding-left: 10px;
   height: 100%;
+  height: 25px;
+  color: rgb(107 114 128);
+  background-color: rgb(238, 238, 238);
+  box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px, rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 2px 2px -1px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px, rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
+}
+
+input.singleselect {
+  text-align: start;
+  height: 100%;
+  height: 25px;
+  color: black;
+  padding-left: 10px;
+}
+
+input.singleselect:focus {
+  text-align: start;
   height: 25px;
   color: rgb(107 114 128);
   background-color: rgb(238, 238, 238);
