--- a/src/app/features/pollster-panel/components/inquiry-form/inquiry-form/inquiry-form.component.html
+++ b/src/app/features/pollster-panel/components/inquiry-form/inquiry-form/inquiry-form.component.html
@@ -111,6 +111,7 @@
         style="width: 120px;padding: 5px;"
         class="h-10 m-2 p-2 bg-gray-700 shadow hover:bg-green-500 rounded-md hover:border-gray-400 w-36 leading-tight text-white cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-8 text-normal"
         type="submit"
+        (click)="saveInquary()"
       >
         Save
       </button>
