--- a/src/styles.css
+++ b/src/styles.css
@@ -109,7 +109,7 @@ input.singleselect:focus {
 
 input.scaleselect {
   display: flex;
-  text-align: start;
+  text-align: center;
   padding-left: 10px;
   width: 55px;
   justify-items: center;
@@ -120,12 +120,16 @@ input.scaleselect {
 
 input.scaleselect:focus {
   display: flex;
-  text-align: start;
+  text-align: center;
   padding-left: 10px;
   height: 25px;
   color: rgb(107 114 128);
   background-color: rgb(238, 238, 238);
   box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px, rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 2px 2px -1px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px, rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
+}
+
+input:focus, textarea:focus, select:focus{
+  outline: none;
 }
 
 .button_app {
@@ -217,6 +221,6 @@ input.scaleselect:focus {
 
 .toast-config {
   margin: 50px;
-  top:9%;
+  top:6%;
   left: 80%;
 }
